--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^3.0.2",
     "@langchain/core": "^1.1.8",
+    "@langchain/langgraph": "^1.0.7",
     "@langchain/openai": "^1.2.0",
     "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.0.1",
