🔧 chore(agent): 配置 OpenRouter API 请求头并修复 Bocha 搜索接口
- 在 `.env` 中启用自主规划模式
  - 新增 `useAutonomousPlanning=true` 配置项
- 为所有 LLM 服务添加 OpenRouter 默认请求头
  - `AgentService`: 添加 HTTP-Referer 和 X-Title 请求头
  - `IntentClassifier`: 添加 HTTP-Referer 和 X-Title 请求头
  - `PlannerService`: 添加 HTTP-Referer 和 X-Title 请求头
  - `ReflectorService`: 添加 HTTP-Referer 和 X-Title 请求头
- 增强自主规划图

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ OPENAI_API_KEY=sk-or-v1-3a9bf7c16d85d1be5b0948f26112711aea5f4e8dca5344c4cd2aff83
 OPENAI_BASEURL=https://openrouter.ai/api/v1
 BOCHA_API_KEY=sk-fe0480c399e74318b8a047217c127f97
 USE_5_STAGE_FLOW=true
+useAutonomousPlanning=true
