--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "dev": "concurrently \"pnpm run start:dev\" \"pnpm --filter frontend dev\" --names \"server,frontend\" --prefix-colors \"cyan,magenta\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -20,7 +21,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^3.0.2",
     "@langchain/core": "^1.1.8",
     "@langchain/langgraph": "^1.0.7",
     "@langchain/openai": "^1.2.0",
@@ -31,15 +31,22 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.11",
     "@nestjs/serve-static": "^5.0.4",
+    "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.11",
-    "ai": "^6.0.5",
+    "axios": "^1.13.2",
     "bullmq": "^5.66.4",
+    "cheerio": "^1.1.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "ioredis": "^5.8.2",
     "langchain": "^1.2.3",
+    "multer": "^2.0.2",
+    "mysql2": "^3.16.0",
     "pptxgenjs": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.3",
+    "typeorm": "^0.3.28",
     "uuid": "^13.0.0",
     "zod": "^4.2.1"
   },
@@ -49,11 +56,15 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/cheerio": "^1.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
+    "@types/react-router-dom": "^5.3.3",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^11.0.0",
+    "concurrently": "^9.2.1",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
